--- a/GpgKeyGen/GpgKeyGen/GpgKeyGen.UI.csproj
+++ b/GpgKeyGen/GpgKeyGen/GpgKeyGen.UI.csproj
@@ -56,6 +56,8 @@
       <SubType>Designer</SubType>
     </ApplicationDefinition>
     <Compile Include="GeneratorParams.cs" />
+    <Compile Include="Properties\Annotations.cs" />
+    <Compile Include="Validators\EmailCorrect.cs" />
     <Compile Include="Validators\FieldRequired.cs" />
     <Page Include="MainWindow.xaml">
       <Generator>MSBuild:Compile</Generator>
