starczy na dziś

--- a/GpgKeyGen/GpgKeyGenWrapper/GpgKeyGenWrapper.csproj
+++ b/GpgKeyGen/GpgKeyGenWrapper/GpgKeyGenWrapper.csproj
@@ -43,6 +43,7 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="GpgBatchGenerator.cs" />
     <Compile Include="GpgKeygenParams.cs" />
     <Compile Include="Program.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
