--- a/GpgKeyGen/GpgKeyGen.Ui.Tests/packages.config
+++ b/GpgKeyGen/GpgKeyGen.Ui.Tests/packages.config
@@ -1,5 +1,8 @@
 ﻿<?xml version="1.0" encoding="utf-8"?>
 <packages>
+  <package id="CommonServiceLocator" version="2.0.4" targetFramework="net472" />
+  <package id="Prism.Core" version="7.1.0.431" targetFramework="net472" />
+  <package id="Prism.Wpf" version="7.1.0.431" targetFramework="net472" />
   <package id="xunit" version="2.4.1" targetFramework="net472" />
   <package id="xunit.abstractions" version="2.0.3" targetFramework="net472" />
   <package id="xunit.analyzers" version="0.10.0" targetFramework="net472" />
