--- a/GpgKeyGen/GeneralUtils/GeneralUtils.csproj
+++ b/GpgKeyGen/GeneralUtils/GeneralUtils.csproj
@@ -43,6 +43,7 @@
   <ItemGroup>
     <Compile Include="EmailUtils.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
+    <Compile Include="TextUtils.cs" />
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
 </Project>
