--- a/GpgKeyGen/GpgKeyGen/GpgKeyGen.UI.csproj
+++ b/GpgKeyGen/GpgKeyGen/GpgKeyGen.UI.csproj
@@ -35,7 +35,8 @@
     <WarningLevel>4</WarningLevel>
   </PropertyGroup>
   <ItemGroup>
-    <Reference Include="CmdWrapper">
+    <Reference Include="CmdWrapper, Version=1.0.0.1, Culture=neutral, processorArchitecture=MSIL">
+      <SpecificVersion>False</SpecificVersion>
       <HintPath>..\LocalLibs\CmdWrapper.dll</HintPath>
     </Reference>
     <Reference Include="CommonServiceLocator, Version=2.0.4.0, Culture=neutral, PublicKeyToken=489b6accfaf20ef0, processorArchitecture=MSIL">
