Add user settings

--- a/GpgKeyGen/GpgKeyGen/App.config
+++ b/GpgKeyGen/GpgKeyGen/App.config
@@ -14,7 +14,7 @@
                 <value />
             </setting>
             <setting name="KeyServer" serializeAs="String">
-                <value />
+                <value>192.168.56.101</value>
             </setting>
         </GpgKeyGen.Properties.Settings>
     </userSettings>
