--- a/GpgKeyGen/GpgKeyGen/Properties/Settings.settings
+++ b/GpgKeyGen/GpgKeyGen/Properties/Settings.settings
@@ -6,7 +6,7 @@
       <Value Profile="(Default)" />
     </Setting>
     <Setting Name="KeyServer" Type="System.String" Scope="User">
-      <Value Profile="(Default)" />
+      <Value Profile="(Default)">192.168.56.101</Value>
     </Setting>
   </Settings>
 </SettingsFile>
