--- a/GpgKeyGen/GpgKeyGen/packages.config
+++ b/GpgKeyGen/GpgKeyGen/packages.config
@@ -1,6 +1,9 @@
 ﻿<?xml version="1.0" encoding="utf-8"?>
 <packages>
   <package id="CommonServiceLocator" version="2.0.4" targetFramework="net472" />
+  <package id="Microsoft.WindowsAPICodePack-Core" version="1.1.0.0" targetFramework="net472" />
+  <package id="Microsoft.WindowsAPICodePack-Shell" version="1.1.0.0" targetFramework="net472" />
+  <package id="OpenDialog" version="1.1.1" targetFramework="net472" />
   <package id="Prism.Core" version="7.1.0.431" targetFramework="net472" />
   <package id="Prism.Wpf" version="7.1.0.431" targetFramework="net472" />
 </packages>
