Dodanie oświadczenia po wygenerowaniu certyfikatu

--- a/GpgKeyGen/GpgKeyGen/App.config
+++ b/GpgKeyGen/GpgKeyGen/App.config
@@ -16,6 +16,9 @@
             <setting name="KeyServer" serializeAs="String">
                 <value>192.168.56.101</value>
             </setting>
+            <setting name="DocumentOutputPath" serializeAs="String">
+                <value />
+            </setting>
         </GpgKeyGen.Properties.Settings>
     </userSettings>
 </configuration>
