Dodano możliwość ustawienia po ilu dniach cert wygaśnie.

--- a/GpgKeyGen/GpgKeyGen/App.config
+++ b/GpgKeyGen/GpgKeyGen/App.config
@@ -19,6 +19,9 @@
             <setting name="DocumentOutputPath" serializeAs="String">
                 <value />
             </setting>
+            <setting name="ExpAfterDays" serializeAs="String">
+                <value>1</value>
+            </setting>
         </GpgKeyGen.Properties.Settings>
     </userSettings>
 </configuration>
