--- a/GpgKeyGen/GpgKeyGen/Properties/Settings.settings
+++ b/GpgKeyGen/GpgKeyGen/Properties/Settings.settings
@@ -11,5 +11,8 @@
     <Setting Name="DocumentOutputPath" Type="System.String" Scope="User">
       <Value Profile="(Default)" />
     </Setting>
+    <Setting Name="ExpAfterDays" Type="System.Int32" Scope="User">
+      <Value Profile="(Default)">1</Value>
+    </Setting>
   </Settings>
 </SettingsFile>
